# arkpz-pzpi-22-10-ielizarenko-oleksandr

./: README.md
lb_3/: alembic.ini  main.py  pyproject.toml
lb_3/alembic/: env.py
lb_3/alembic/versions/: 09c59111bc9a_lb_1_procedure_function.py  2538edfcbb60_create_tables.py  c62c6e6b14e1_lb_2_trigger.py
lb_3/app/api/: api.py
lb_3/app/api/endpoints/: goods.py  sales.py
lb_3/app/db/: session.py
lb_3/models/: company.py
lb_3/schemas/: goods.py  sales.py
my_project/: alembic.ini  pyproject.toml
my_project/alembic/: env.py
my_project/alembic/versions/: 3328f3d8ef0e_initial_migration.py  794be7c5410e_fixed_error_part_2.py  b89e8e9448c9_calculate_delay.py  efd4b4c86ff5_fixed_error.py
my_project/app/: main.py
my_project/app/api/: api.py
my_project/app/api/endpoints/: routes.py
my_project/app/api/shemas/: routes.py
my_project/app/crud/: base.py  routes.py
my_project/app/db/: initial_models.py  session.py
