[tool.poetry]
name = "my-project"
version = "1"
description = ""
authors = ["т"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
alembic = "^1.14.0"
pydantic = "^2.10.5"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
fastapi-pagination = "^0.12.34"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
